addon/styles/_pix-multi-select.scss
.pix-multi-select {
  position: relative;
  display: inline-flex;
  flex-direction: column;
  gap: var(--pix-spacing-1x);

  &--inline {
    flex-direction: row;
    gap: var(--pix-spacing-2x);
    align-items: center;
  }
}

.pix-multi-select-header {
  @extend %pix-body-s;
  @extend %pix-form-element-state;

  position: relative;
  display: flex;
  align-items: center;
  width: 100%;
  padding: var(--pix-spacing-2x) var(--pix-spacing-3x);
  color: var(--pix-neutral-900);
  background-color: var(--pix-neutral-0);
  border: 1px var(--pix-neutral-500) solid;
  border-radius: var(--pix-spacing-1x);
  cursor: pointer;

  &--big {
    height: 44px;
  }

  &__search-icon {
    color: var(--pix-neutral-900);
  }

  &__title {
    position: absolute;
    width: 0;
    height: 0;
    opacity: 0;
  }

  input.pix-multi-select-header__search-input {
    width: 100%;
    height: inherit;
    padding: 0 10px;
    color: var(--pix-neutral-900);
    font-size: 0.875rem;
    background: transparent;
    border: none;
    border-radius: 3px;
    outline: none;
  }

  &__dropdown-icon {
    @extend %pix-body-s;

    position: absolute;
    top: calc(50% - 6px);
    right: 10px;
    color: var(--pix-neutral-900);
    pointer-events: none;
  }
}

.pix-multi-select-list {
  @extend %pix-shadow-sm;

  position: absolute;
  z-index: 200;
  min-width: 100%;
  max-height: 12.5rem;
  margin: 0;
  margin-top: var(--pix-spacing-1x);
  padding: 0;
  overflow-y: auto;
  list-style-type: none;
  background-color: var(--pix-neutral-0);
  border-top: none;
  border-radius: 0 0 var(--pix-spacing-1x) var(--pix-spacing-1x);
  transition: all 0.1s ease-in-out;

  &__item-label {
    padding: var(--pix-spacing-2x) var(--pix-spacing-6x);
  }

  &--hidden {
    visibility: hidden;
    opacity: 0;
  }

  &::-webkit-scrollbar {
    width: 11px;
  }

  &::-webkit-scrollbar-track {
    background: var(--pix-neutral-20);
    border: 1px solid var(--pix-neutral-20);
    border-radius: var(--pix-spacing-1x);
  }

  &::-webkit-scrollbar-thumb {
    width: 0.375rem;
    background: var(--pix-neutral-100);
    border-radius: var(--pix-spacing-1x);
  }

  &::-webkit-scrollbar-thumb:hover {
    background: var(--pix-neutral-100);
  }

  li.pix-multi-select-list__item {
    position: relative;
    list-style: none;

    &:hover,
    &:focus {
      background-color: var(--pix-primary-10);
      outline: none;
      cursor: pointer;
    }

    &--no-result {
      padding: var(--pix-spacing-4x) 0;
      text-align: center;
    }

    &:last-of-type {
      border-bottom: none;
    }
  }
}

